// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CarouselDesktop /> should render correctly desktop carousel 1`] = `
<div>
  <CarouselDesktop
    highlighteds={
      Array [
        Object {
          "id": 4,
        },
        Object {
          "id": 3,
        },
        Object {
          "id": 2,
        },
        Object {
          "id": 1,
        },
      ]
    }
  />
</div>
`;

exports[`<CarouselDesktop /> should render correctly mobile carousel 1`] = `
<div>
  <CarouselMobile
    highlighteds={
      Array [
        Object {
          "id": 4,
        },
        Object {
          "id": 3,
        },
        Object {
          "id": 2,
        },
        Object {
          "id": 1,
        },
      ]
    }
  />
</div>
`;
